@@ -1,3 +1,9 @@
+Mon Oct 21 21:53:21 2002  Peter Naulls  <peter@chocky.org>
+
+	* sys/_syslib.s (__main): Move ENTRY after NAME.
+	* common/riscosify.c (__riscosify): Don't default to filetype text
+	if there is an error.
+
 Sat Sep 28 16:00:00 2002  Peter Naulls  <peter@chocky.org>
 
 	* unix/unix.c (convert_command_line): Fix argument could error
